# Mindshard

./: .env  .gitignore  audio_to_text.py  code_overview.py  main.py  metaprompt.md  readme.md
downloadMedia/: yt_video.py
fetchMetadata/: yt.py
frontend/: components.json  package-lock.json  package.json
frontend/src/app/: actions.ts  default.tsx  error.tsx  global-error.tsx  globals.css  layout.tsx  loading.tsx  page.module.css  page.tsx
frontend/src/app/api/: route.ts
frontend/src/app/home/: page.tsx
frontend/src/lib/components/misc/: registry.tsx
frontend/src/lib/components/styles/: GlobalStyle.tsx  ReusableStyledComponents.tsx  globals.css
frontend/src/lib/validations/: input.ts
pythonBackend/: app.py  audio_extractor.py  extraction_result.py  input_handler.py  main.py  pyproject.toml  requirements.txt
pythonBackend/instance/: site.db
